# otus-task11

./: CMakeLists.txt  Doxyfile  annotated.html  builder_8cpp.html  builder_8cpp__incl.map  builder_8cpp__incl.md5  builder_8h.html  builder_8h__dep__incl.map  builder_8h__dep__incl.md5  builder_8h__incl.map  builder_8h__incl.md5  builder_8h_source.html  class_client_data_factory-members.html  class_client_data_factory.html  class_client_data_factory__coll__graph.map  class_client_data_factory__coll__graph.md5  class_server-members.html  class_server.html  class_server__coll__graph.map  class_server__coll__graph.md5  class_server__inherit__graph.map  class_server__inherit__graph.md5  class_tables-members.html  class_tables.html  class_tables__coll__graph.map  class_tables__coll__graph.md5  class_tables__inherit__graph.map  class_tables__inherit__graph.md5  class_validator-members.html  class_validator.html  class_validator__coll__graph.map  class_validator__coll__graph.md5  classes.html  clientdata_8h.html  clientdata_8h__dep__incl.map  clientdata_8h__dep__incl.md5  clientdata_8h__incl.map  clientdata_8h__incl.md5  clientdata_8h_source.html  clientdatafactory_8cpp.html  (+106 more)
.github/workflows/: release.yaml
scripts/: build-x64-win-vs-debug.bat
search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: CMakeLists.txt  builder.cpp  builder.h  clientdata.h  clientdatafactory.cpp  clientdatafactory.h  command.h  isender.h  itables.h  main.cpp  server.cpp  server.h  tables.cpp  tables.h  validator.cpp  validator.h
tests/: CMakeLists.txt  test_join_server.cpp  test_join_server.h
